--- a/scripts/TP-NG/.env.sample
+++ b/scripts/TP-NG/.env.sample
@@ -1,22 +1,18 @@
-SEND_TELEMETRY="False" # Turn True to help report new errors
+SEND_TELEMETRY="True" # Turn False to not report new errors to devs
 # SENTRY_DSN="" Override TELEMETRY SENTRY DSN
 
-
-MEDIA_VOLUME_PATH="/path/to/audio"
-STATIC_VOLUME_PATH="/path/to/staticfiles"
-
+MEDIA_VOLUME_PATH="/home/trunk/SDRAudio"
+STATIC_VOLUME_PATH="/home/trunk/SDR"
 
 FORCE_SECURE="True" 
 DEBUG="False"
 SECRET_KEY="9fwg4f0734gh0t8hyf3028y4hgf037w4tyhtr579435ty9h45098h"
-TZ=America/Chicago
-
+TZ=America/New_York
 
 RABBITMQ_DEFAULT_USER="trunkplayer"
-RABBITMQ_DEFAULT_PASS="CHANGEME"
+RABBITMQ_DEFAULT_PASS="trunk"
 
-
-AUDIO_DOWNLOAD_HOST="https://your.site" # This is not needed yet
+AUDIO_DOWNLOAD_HOST="https://your.site" # This is not needed yet just leave default
 
 # API Base URL (For Frontend)
 # You only need one of these options (or none and it will prompt the user)
@@ -31,14 +27,12 @@ S3_SECRET_ACCESS_KEY="SECRET_KEY"
 S3_BUCKET_NAME="BUCKET_NAME"
 S3_ENDPOINT_URL="https://s3.us-west-1.amazonaws.com"
 
-
-DJANGO_SUPERUSER_PASSWORD="password"
+DJANGO_SUPERUSER_PASSWORD="trunk"
 DJANGO_SUPERUSER_EMAIL="admin@example.com"
 
-
-DATABASE_PATH="/path/to/vol/db"
+DATABASE_PATH="/home/trunk/SDR/db"
 SQL_HOST="database"
-SQL_ROOT_PASSWORD="CHANGEME"
+SQL_ROOT_PASSWORD="trunk"
 SQL_DATABASE="trunkplayerng"
 SQL_USER="TrunkPlayer"
-SQL_PASSWORD="CHANGEME"
+SQL_PASSWORD="trunk"
