update folder for TP-NG

--- a/scripts/TP-NG/.env.sample
+++ b/scripts/TP-NG/.env.sample
@@ -2,7 +2,7 @@ SEND_TELEMETRY="True" # Turn False to not report new errors to devs
 # SENTRY_DSN="" Override TELEMETRY SENTRY DSN
 
 MEDIA_VOLUME_PATH="/home/trunk/SDRAudio"
-STATIC_VOLUME_PATH="/home/trunk/SDR"
+STATIC_VOLUME_PATH="/home/trunk/SDR/TP-NG"
 
 FORCE_SECURE="True" 
 DEBUG="False"
